--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/gnuns/code2/issues"
   },
-  "homepage": "https://github.com/gnuns/code2#readme"
+  "homepage": "https://github.com/gnuns/code2#readme",
+  "dependencies": {
+    "express": "^4.15.2",
+    "socket.io": "^1.7.3",
+    "socket.io-redis": "^4.0.0"
+  }
 }
