--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "code sharing platform",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,7 +18,9 @@
   },
   "homepage": "https://github.com/gnuns/code2#readme",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "lodash": "^4.17.4",
     "socket.io": "^1.7.3",
     "socket.io-redis": "^4.0.0"
   }
