--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "lodash": "^4.17.4",
-    "socket.io": "^1.7.3",
-    "socket.io-redis": "^4.0.0"
+    "mongoose": "^4.9.1",
+    "socket.io": "^1.7.3"
   }
 }
